# FoodPilot-AI

./: .env.example  .gitattributes  .gitignore  Agent 1 - Discovery (Scout).md  Architecture.md  ORCHESTRATOR.md  README.md  compose.yaml  config.py  main.py  orchestrator.py  pipeline.py  pyproject.toml  requirements.txt  test_order_finalizer.py
RAG/: .gitignore  AGENT_WORKFLOW.md  Rag.py  data.json  test_agent.py
RAG/Data/: Egyptian_Dishes_Complete_Reference.json
RAG/chroma_dishes_db/: chroma.sqlite3
RAG/src/: Chunking.py  Data_loader.py  Document.py  Embed_store.py  Reranker.py  Retrieve.py  rag.py  test_rag.py
agent1_scout/: README.md  __init__.py  compile.py  config.py  deals.py  deals_estimate.py  deals_fallback.py  discovery.py  distance.py  graph.py  i18n.py  intent.py  nodes.py  scoring.py  state.py
order_finalizer/: config.py  graph.py  nodes.py  state.py  test_runner.py  tools.py
scripts/: inspect_deals.py  inspect_discovery.py
server/: Dockerfile  __init__.py  app.py  runner.py  serializers.py  session.py
tests/: test_compile.py  test_deals.py  test_deals_estimate.py  test_deals_fallback.py  test_deals_talabat.py  test_discovery.py  test_distance.py  test_find_deals.py  test_graph.py  test_i18n.py  test_intent.py  test_interrupt_deal.py  test_interrupt_restaurant.py  test_main.py  test_nodes.py  test_order_finalizer.py  test_pipeline_integration.py  test_scoring.py  test_state.py  test_tracing.py
web/: .env.example  BUILD_NOTES.md  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  server.py  tailwind.config.ts
(+42 files in other folders)
