[project]
name = "food-pilot-scout"
version = "0.1.0"
description = "Food Pilot — Agent 1: Discovery / Scout (Finder + Picker) LangGraph agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langsmith>=0.1.0",
    "apify-client>=1.7.0",
    "tavily-python>=0.5.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "langchain-groq>=1.1.3",
    "fastapi>=0.138.1",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.uv]
package = false
